v0.8/_sources/examples/ndbc/buoy_met_request.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_ndbc_buoy_met_request.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_ndbc_buoy_met_request.py:


NDBC Buoy Meteorological Data Request
=====================================

The NDBC keeps a 45-day recent rolling file for each buoy. This examples shows how to access
the basic meteorological data from a buoy and make a simple plot.


.. code-block:: python


    import matplotlib.pyplot as plt

    from siphon.simplewebservice.ndbc import NDBC







Get a pandas data frame of all of the observations, meteorological data is the default
observation set to query.


.. code-block:: python

    df = NDBC.realtime_observations('41002')
    df.head()







Let's make a simple time series plot to checkout what the data look like.


.. code-block:: python

    fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(12, 10))
    ax2b = ax2.twinx()

    # Pressure
    ax1.plot(df['time'], df['pressure'], color='black')
    ax1.set_ylabel('Pressure [hPa]')

    # Wind speed, gust, direction
    ax2.plot(df['time'], df['wind_speed'], color='tab:orange')
    ax2.plot(df['time'], df['wind_gust'], color='tab:olive', linestyle='--')
    ax2b.plot(df['time'], df['wind_direction'], color='tab:blue', linestyle='-')
    ax2.set_ylabel('Wind Speed [m/s]')
    ax2b.set_ylabel('Wind Direction')

    # Water temperature
    ax3.plot(df['time'], df['water_temperature'], color='tab:brown')
    ax3.set_ylabel('Water Temperature [degC]')

    plt.show()



.. image:: /examples/ndbc/images/sphx_glr_buoy_met_request_001.png
    :class: sphx-glr-single-img




**Total running time of the script:** ( 0 minutes  1.623 seconds)


.. _sphx_glr_download_examples_ndbc_buoy_met_request.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: buoy_met_request.py <buoy_met_request.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: buoy_met_request.ipynb <buoy_met_request.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
